@@ -6,6 +6,9 @@ Changes since 2.4.21:
 Lib/
 * LDIFParser now also accepts value-spec without a space
   after the colon.
+* Added key-word argument authz_id to LDAPObject methods
+  sasl_non_interactive_bind_s(), sasl_external_bind_s() and 
+  sasl_gssapi_bind_s()
 
 Doc/
 * Started missing docs for sub-module ldap.sasl.
@@ -1207,4 +1210,4 @@ Released 2.0.0pre02 2002-02-01
 ----------------------------------------------------------------
 Released 1.10alpha3 2000-09-19
 
-$Id: CHANGES,v 1.359 2015/10/24 15:27:03 stroeder Exp $
+$Id: CHANGES,v 1.360 2015/10/24 15:42:41 stroeder Exp $
